# BCDToolWindows

./: CMakeLists.txt  LICENSE  README.md  build.bat
src/: backup.cpp  backup.h  boot_editor.cpp  boot_editor.h  compat.h  efi_types.h  esp_scanner.cpp  esp_scanner.h  gpt_reader.cpp  gpt_reader.h  main.cpp  os_detector.cpp  os_detector.h  privilege.cpp  privilege.h  uefi_vars.cpp  uefi_vars.h
